tests/integration_tests/caldav/snapshots/light_integrations__integration_tests__caldav__calendar__get_body.snap
---
source: tests/integration_tests/caldav/calendar.rs
expression: body
---
BEGIN:VCALENDAR
VERSION:2.0
PRODID:RustiCal Export
CALSCALE:GREGORIAN
X-WR-CALNAME:Calendar
X-WR-CALDESC:Description
X-WR-CALCOLOR:#00FF00
X-WR-TIMEZONE:US/Eastern
END:VCALENDAR
