tests/integration_tests/caldav/snapshots/light_integrations__integration_tests__caldav__calendar__multiget_body.snap
---
source: tests/integration_tests/caldav/calendar.rs
expression: body
---
<?xml version="1.0" encoding="utf-8"?>
<multistatus xmlns="DAV:" xmlns:CAL="urn:ietf:params:xml:ns:caldav" xmlns:CARD="urn:ietf:params:xml:ns:carddav" xmlns:CS="http://calendarserver.org/ns/" xmlns:PUSH="https://bitfire.at/webdav-push">
    <response>
        <href>/caldav/principal/user/calendar/qwue23489.ics</href>
        <propstat>
            <prop>
                <getetag>&quot;f781224669f0db2674e9e45a9be2b01774c02136e3fb72792ef217bccf49fafa&quot;</getetag>
            </prop>
            <status>HTTP/1.1 200 OK</status>
        </propstat>
    </response>
    <response>
        <href>/home/bernard/addressbook/vcf1.vcf</href>
        <status>HTTP/1.1 404 Not Found</status>
    </response>
</multistatus>
