tests/integration_tests/caldav/snapshots/light_integrations__integration_tests__caldav__calendar__propfind_body.snap
---
source: tests/integration_tests/caldav/calendar.rs
expression: body
---
<?xml version="1.0" encoding="utf-8"?>
<multistatus xmlns="DAV:" xmlns:CAL="urn:ietf:params:xml:ns:caldav" xmlns:CARD="urn:ietf:params:xml:ns:carddav" xmlns:CS="http://calendarserver.org/ns/" xmlns:PUSH="https://bitfire.at/webdav-push">
    <response>
        <href>/caldav/principal/user/calendar/</href>
        <propstat>
            <prop>
                <calendar-color xmlns="http://apple.com/ns/ical/">#00FF00</calendar-color>
                <CAL:calendar-description>Description</CAL:calendar-description>
                <CAL:calendar-timezone>BEGIN:VCALENDAR
PRODID:-//github.com/lennart-k/vzic-rs//RustiCal Calendar server//EN
VERSION:2.0
BEGIN:VTIMEZONE
TZID:US/Eastern
TZID-ALIAS-OF:America/New_York
LAST-MODIFIED:20260124T185655Z
X-LIC-LOCATION:US/Eastern
X-PROLEPTIC-TZNAME:LMT
BEGIN:STANDARD
TZNAME:EST
TZOFFSETFROM:-045602
TZOFFSETTO:-0500
DTSTART:18831118T120358
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:EDT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:19180331T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU;UNTIL=19200328T070000Z
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:EST
TZOFFSETFROM:-0400
TZOFFSETTO:-0500
DTSTART:19181027T020000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU;UNTIL=19201031T060000Z
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:EDT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:19210424T020000
RRULE:FREQ=YEARLY;BYMONTH=4;BYDAY=-1SU;UNTIL=19410427T070000Z
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:EST
TZOFFSETFROM:-0400
TZOFFSETTO:-0500
DTSTART:19210925T020000
RRULE:FREQ=YEARLY;BYMONTH=9;BYDAY=-1SU;UNTIL=19410928T060000Z
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:EWT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:19420209T020000
END:DAYLIGHT
BEGIN:DAYLIGHT
TZNAME:EPT
TZOFFSETFROM:-0400
TZOFFSETTO:-0400
DTSTART:19450814T190000
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:EST
TZOFFSETFROM:-0400
TZOFFSETTO:-0500
DTSTART:19450930T020000
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:EDT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:19460428T020000
RRULE:FREQ=YEARLY;BYMONTH=4;BYDAY=-1SU;UNTIL=19730429T070000Z
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:EST
TZOFFSETFROM:-0400
TZOFFSETTO:-0500
DTSTART:19460929T020000
RRULE:FREQ=YEARLY;BYMONTH=9;BYDAY=-1SU;UNTIL=19540926T060000Z
END:STANDARD
BEGIN:STANDARD
TZNAME:EST
TZOFFSETFROM:-0400
TZOFFSETTO:-0500
DTSTART:19551030T020000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU;UNTIL=20061029T060000Z
END:STANDARD
BEGIN:DAYLIGHT
TZNAME:EDT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:19740106T020000
RDATE:19750223T020000
END:DAYLIGHT
BEGIN:DAYLIGHT
TZNAME:EDT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:19760425T020000
RRULE:FREQ=YEARLY;BYMONTH=4;BYDAY=-1SU;UNTIL=19860427T070000Z
END:DAYLIGHT
BEGIN:DAYLIGHT
TZNAME:EDT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:19870405T020000
RRULE:FREQ=YEARLY;BYMONTH=4;BYDAY=1SU;UNTIL=20060402T070000Z
END:DAYLIGHT
BEGIN:DAYLIGHT
TZNAME:EDT
TZOFFSETFROM:-0500
TZOFFSETTO:-0400
DTSTART:20070311T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=2SU
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:EST
TZOFFSETFROM:-0400
TZOFFSETTO:-0500
DTSTART:20071104T020000
RRULE:FREQ=YEARLY;BYMONTH=11;BYDAY=1SU
END:STANDARD
END:VTIMEZONE
END:VCALENDAR
</CAL:calendar-timezone>
                <CAL:timezone-service-set>
                    <href>https://www.iana.org/time-zones</href>
                </CAL:timezone-service-set>
                <CAL:calendar-timezone-id>US/Eastern</CAL:calendar-timezone-id>
                <calendar-order xmlns="http://apple.com/ns/ical/">0</calendar-order>
                <CAL:supported-calendar-component-set>
                    <CAL:comp name="VEVENT"/>
                    <CAL:comp name="VTODO"/>
                    <CAL:comp name="VJOURNAL"/>
                </CAL:supported-calendar-component-set>
                <CAL:supported-calendar-data>
                    <CAL:calendar-data content-type="text/calendar" version="2.0"/>
                </CAL:supported-calendar-data>
                <CAL:supported-collation-set>
                    <CAL:supported-collation>i;ascii-casemap</CAL:supported-collation>
                    <CAL:supported-collation>i;unicode-casemap</CAL:supported-collation>
                    <CAL:supported-collation>i;octet</CAL:supported-collation>
                </CAL:supported-collation-set>
                <CAL:max-resource-size>10000000</CAL:max-resource-size>
                <supported-report-set>
                    <supported-report>
                        <report>
                            <CAL:calendar-query/>
                        </report>
                    </supported-report>
                    <supported-report>
                        <report>
                            <CAL:calendar-multiget/>
                        </report>
                    </supported-report>
                    <supported-report>
                        <report>
                            <sync-collection/>
                        </report>
                    </supported-report>
                </supported-report-set>
                <CAL:min-date-time>-2621430101T000000Z</CAL:min-date-time>
                <CAL:max-date-time>+2621421231T235959Z</CAL:max-date-time>
                <sync-token>github.com/lennart-k/rustical/ns/0</sync-token>
                <CS:getctag>github.com/lennart-k/rustical/ns/0</CS:getctag>
                <PUSH:transports>
                    <PUSH:web-push/>
                </PUSH:transports>
                <PUSH:topic>[PUSH_TOPIC]</PUSH:topic>
                <PUSH:supported-triggers>
                    <PUSH:content-update>
                        <depth>1</depth>
                    </PUSH:content-update>
                    <PUSH:property-update>
                        <depth>1</depth>
                    </PUSH:property-update>
                </PUSH:supported-triggers>
                <resourcetype>
                    <collection/>
                    <CAL:calendar/>
                </resourcetype>
                <displayname>Calendar</displayname>
                <current-user-principal>
                    <href>/caldav/principal/user/</href>
                </current-user-principal>
                <current-user-privilege-set>
                    <privilege>
                        <all/>
                    </privilege>
                </current-user-privilege-set>
                <owner>
                    <href>/caldav/principal/user/</href>
                </owner>
            </prop>
            <status>HTTP/1.1 200 OK</status>
        </propstat>
    </response>
</multistatus>
